# Homework

./: README.md
1_2019_periode_4_domotica/Domotica/: Arduino.rar
2019_periode_2_machine_intelligence/ObjectOrientedProgramming_2/les2/: main.cpp
2019_periode_2_machine_intelligence/OperatingSystems/: opdracht_8.sh  schaakbord.sh
2019_periode_2_machine_intelligence/OperatingSystems/read/: read.sh
2020_periode_4_robotica/OpenCV/: opdracht_1.py
2_2019_periode_2_machine_intelligence/ObjectOrientedProgramming_2/les1/: a.out  les1.cpp
2_2019_periode_2_machine_intelligence/ObjectOrientedProgramming_2/les2/: math2000.cpp  math2000.h
2_2019_periode_2_machine_intelligence/OperatingSystems/: les2.sh  opdracht_7.sh  sdate.sh  swapwords.sh
2_2020_periode_4_robotica/OpenCV/: opdracht_2.py  opdracht_3a.py  opdracht_3b.py  opdracht_4a.py  opdracht_4b.py  opdracht_6.py
jaar_1/periode_1_intro_programmeren/ConsoleAppWeek2/: ConsoleAppWeek2.sln
jaar_1/periode_1_intro_programmeren/ConsoleApplication/: ConsoleApplication.sln
jaar_1/periode_1_intro_programmeren/Week3App/: Week3App.sln
jaar_1/periode_1_intro_programmeren/Week4/: Week4.sln
jaar_1/periode_1_intro_programmeren/Week5/: Week5.sln
jaar_1/periode_3_webdevelopment/GevorderdProgrammerenPracticumWeek2/: GevorderdProgrammerenPracticumWeek2.sln
jaar_1/periode_3_webdevelopment/ProgrammerenWeek3/: ProgrammerenWeek3.sln
jaar_1/periode_4_domotica/AppsProgrammeren/MobileServer/: CMakeLists.txt  CProgram.cs  Client.cs  Program.cs  Server.cs
jaar_2/periode_2_machine_intelligence/OperatingSystems/: info.sh  ts.sh  (+1 more)
(+140 files in other folders)
